--- a/felinosDest.html
+++ b/felinosDest.html
@@ -1,13 +1,153 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img src="./logo.png" id="logo" alt="" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./felinosDest.html">Felinos Destacados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="text-center w-100 mx-auto text-center pt-5" id="especie">
+      <div class="container">
+        <h1>Especies importantes e interesantes</h1>
+        <div class="row">
+          <div class="card col md-3 pt-4 ">
+            <img src="./linceiberico.jpeg" class="card-img" height="200px">
+            <div class="card-body pb-3">
+              <h2 class="card-title">Lince Ibérico</h2>
+              <p class="card-text">El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
+                Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
+                recuperación gracias a esfuerzos de conservación.</p>
+            </div>
+          </div>
+          <div class="card col md-3 pt-4">
+            <img src="./panteranegra.jpg" class="card-img" height="200px">
+            <div class="card-body pb-3">
+              <h2 class="card-title">Pantera Negra</h2>
+              <p class="card-text">La pantera negra es una variación melánica del leopardo (Panthera pardus) o jaguar
+                (Panthera onca), con pelaje negro debido a una mutación genética. Son felinos ágiles, poderosos y
+                cazadores nocturnos.</p>
+                <p class="card-text">Peligro de extinción: Casi Amenazado/Vulnerable</p>
+            </div>
+          </div>
+          <div class="card col md-3 pt-4">
+            <img src="./leopardoamur.jpg" class="card-img" height="200px">
+            <div class="card-body pb-3">
+              <h2 class="card-title">Leopardo Amur</h2>
+              <p class="card-text">El leopardo de Amur (Panthera pardus orientalis) es una subespecie en peligro, con
+                menos de 100 individuos en libertad. Habita en el este de Rusia y noreste de China, y enfrenta amenazas
+                como la caza furtiva y la pérdida de hábitat. Es un cazador solitario y nocturno.</p>
+                <p>Peligro de extinción: Crítico</p>
+            </div>
+          </div>
+          <div class="card col md-3 pt-4">
+            <img src="./leonblanco.jpg" class="card-img" height="200px">
+            <div class="card-body pb-3">
+              <h2 class="card-title">León Blanco</h2>
+              <p class="card-text">El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
+                blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en
+                reservas y zoológicos. Es un símbolo de belleza y poder.</p>
+                <p>Peligro de extinción: Vulnerable</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card col md-3 pt-4">
+          <img src="" alt="">
+          <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolor ipsam
+            molestias impedit
+            aliquam nisi debitis vel, aut rem recusandae sint praesentium fuga sunt voluptatum corporis nulla aperiam!
+            Nobis, molestias.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Grandes Felinos</h5>
+          <p>
+            Explora la majestuosidad de los depredadores más increíbles del planeta. Un documental para observar la vida
+            de la fauna salvaje.
+          </p>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Enlaces</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Felinos Destacados</a></li>
+            <li><a href="#" class="text-white text-decoration-none">conservación</a></li>
+            <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
+          </ul>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Síguenos</h5>
+          <p>Nuestras redes sociales:</p>
+          <div>
+            <a href="#" class="btn btn-outline-light btn-sm me-2">
+              <i class="bi bi-instagram"></i> Instagram
+            </a>
+            <a href="#" class="btn btn-outline-light btn-sm me-2">
+              <i class="bi bi-facebook"></i> Facebook
+            </a>
+            <a href="#" class="btn btn-outline-light btn-sm">
+              <i class="bi bi-twitter"></i> Twitter
+            </a>
+          </div>
+        </div>
+      </div>
+      <hr class="border-secondary">
+      <div class="text-center">
+        <p class="mb-0">&copy; 2025 Grandes Felinos. Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
