--- a/index.html
+++ b/index.html
@@ -1,214 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Inicio</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="" alt="" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
 
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a
-                  class="nav-link active text-white"
-                  aria-current="page"
-                  href="#"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Felinos Destacados</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Conservacion</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle text-white"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li> -->
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section
-        class="hero bg-dark text-white text-center py-5"
-        style="
-          background-image: url('ruta-imagen.jpg');
-          background-size: cover;
-          background-position: center;
-        "
-      >
-        <div class="container">
-          <h1 class="display-4">Grandes Felinos</h1>
-          <p class="lead">Los Reyes de la Naturaleza</p>
-          <div class="d-flex justify-content-center gap-3">
-            <a href="especies.html" class="btn btn-primary btn-lg"
-              >Explora las especies</a
-            >
-            <a href="proyecto.html" class="btn btn-outline-light btn-lg"
-              >Sobre el proyecto</a
-            >
-          </div>
-        </div>
-      </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-      <section class="about py-5 text-center">
-        <div class="container">
-          <h2 class="mb-4">Explora un mundo salvaje</h2>
-          <p class="mb-5">Sumérgete en los hábitats de los grandes felinos y descubre sus historias.</p>
-          <div class="row">
-            <div class="col-md-4">
-              <img src="icono1.png" alt="Icono 1" class="mb-3" style="width: 50px;">
-              <h5>Hábitats únicos</h5>
-              <p>Desde la selva tropical hasta la sabana africana.</p>
-            </div>
-            <div class="col-md-4">
-              <img src="icono2.png" alt="Icono 2" class="mb-3" style="width: 50px;">
-              <h5>Comportamiento fascinante</h5>
-              <p>Conoce sus costumbres y su papel en el ecosistema.</p>
-            </div>
-            <div class="col-md-4">
-              <img src="icono3.png" alt="Icono 3" class="mb-3" style="width: 50px;">
-              <h5>Protección y futuro</h5>
-              <p>Descubre los esfuerzos por conservarlos.</p>
-            </div>
-          </div>
-        </div>
-      </section>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img src="./logo.png" id="logo" alt="" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <section class="gallery py-5">
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./leonblanco.jpg" class="d-block m-auto" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-black">León Blanco</h5>
-                <p class="text-black">El león blanco es una variante rara del león africano con pelaje blanco, debido a una mutación genética.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./leopardoamur.jpg" class="d-block m-auto" alt="...">
-              <div class="carousel-caption d-none d-md-block py-1">
-                <h5 class="text-black">Second slide label</h5>
-                <p class="text-black">Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./linceiberico.jpeg" class="d-block m-auto" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./tigremaltes.jpg" class="d-block m-auto" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./felinosDest.html">Felinos Destacados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+            </li>
+          </ul>
         </div>
-      </section>
-      
-    </main>
-    <footer class="bg-dark text-white py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <h5 class="mb-3">Grandes Felinos</h5>
-        <p>
-          Explora la majestuosidad de los depredadores más increíbles del planeta. Un documental para observar la vida de la fauna salvaje.
-        </p>
       </div>
-      <div class="col-md-4 mb-4">
-        <h5 class="mb-3">Enlaces</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Felinos Destacados</a></li>
-          <li><a href="#" class="text-white text-decoration-none">conservación</a></li>
-          <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
-        </ul>
-      </div>
-      <div class="col-md-4 mb-4">
-        <h5 class="mb-3">Síguenos</h5>
-        <p>Nuestras redes sociales:</p>
-        <div>
-          <a href="#" class="btn btn-outline-light btn-sm me-2">
-            <i class="bi bi-instagram"></i> Instagram
-          </a>
-          <a href="#" class="btn btn-outline-light btn-sm me-2">
-            <i class="bi bi-facebook"></i> Facebook
-          </a>
-          <a href="#" class="btn btn-outline-light btn-sm">
-            <i class="bi bi-twitter"></i> Twitter
-          </a>
+    </nav>
+  </header>
+  <main>
+    <section class="hero bg-dark text-white text-center fondo"
+      style="background-image: url('./panteranegra.jpg'); background-size: cover; background-position: center;">
+      <div class="container">
+        <h1 class="display-4">Grandes Felinos</h1>
+        <p class="lead">Los Reyes de la Naturaleza</p>
+        <div class="d-flex justify-content-center gap-3">
+          <a href="./felinosDest.html" class="btn btn-primary btn-lg">Explora los destacados</a>
+          <a href="proyecto.html" class="btn btn-outline-light btn-lg">Sobre el proyecto</a>
         </div>
+      </div>
+    </section>
+    
+    <section class="text-center pb-4">
+      <div class="container pt-4">
+        <h2 class="mb-4">Explora un mundo salvaje</h2>
+        <p class="mb-5">Sumérgete en los hábitats de los grandes felinos y descubre sus historias.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./sabana_16x9.png" class="img-fluid" alt="">
+            <h5>Hábitats únicos</h5>
+            <p>Desde la selva tropical hasta la sabana africana.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="./comportamiento_16x9.png" class="img-fluid height" alt="">
+            <h5 class="pt-4">Comportamiento fascinante</h5>
+            <p>Conoce sus costumbres y su papel en el ecosistema.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="./proteccion_16x9.png" class="img-fluid" alt="">
+            <h5 class="pt-2">Protección y futuro</h5>
+            <p>Descubre los esfuerzos por conservarlos.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery py-5">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./leonblanco.jpg" class="d-block m-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="text-black">León Blanco</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./leopardoamur.jpg" class="d-block m-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block py-1">
+              <h5 class="text-black">Leopardo Amur</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./linceiberico.jpeg" class="d-block m-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Lince Iberico</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./tigremaltes.jpg" class="d-block m-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Tigre maltes</h5>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+  </main>
+  <footer class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Grandes Felinos</h5>
+          <p>
+            Explora la majestuosidad de los depredadores más increíbles del planeta. Un documental para observar la vida
+            de la fauna salvaje.
+          </p>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Enlaces</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Felinos Destacados</a></li>
+            <li><a href="#" class="text-white text-decoration-none">conservación</a></li>
+            <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
+          </ul>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h5 class="mb-3">Síguenos</h5>
+          <p>Nuestras redes sociales:</p>
+          <div>
+            <a href="#" class="btn btn-outline-light btn-sm me-2">
+              <i class="bi bi-instagram"></i> Instagram
+            </a>
+            <a href="#" class="btn btn-outline-light btn-sm me-2">
+              <i class="bi bi-facebook"></i> Facebook
+            </a>
+            <a href="#" class="btn btn-outline-light btn-sm">
+              <i class="bi bi-twitter"></i> Twitter
+            </a>
+          </div>
+        </div>
+      </div>
+      <hr class="border-secondary">
+      <div class="text-center">
+        <p class="mb-0">&copy; 2025 Grandes Felinos. Todos los derechos reservados.</p>
       </div>
     </div>
-    <hr class="border-secondary">
-    <div class="text-center">
-      <p class="mb-0">&copy; 2025 Grandes Felinos. Todos los derechos reservados.</p>
-    </div>
-  </div>
-</footer>
+  </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
 </html>
