Continuacion de felinos

--- a/felinosDest.html
+++ b/felinosDest.html
@@ -46,7 +46,7 @@
   </header>
 
   <main>
-    <!-- Arrelgar tamaño de imagenes cuando más pequeño -->
+    <!-- Arrelgar tamaño de imagenes cuando más pequeño
     <section class="text-center w-100 mx-auto text-center pt-5 pb-5" id="especie">
       <div class="container">
         <h1>Especies importantes e interesantes</h1>
@@ -70,8 +70,9 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        Machos: 150-250 kg
-                        Hembras: 120-180 kg
+                        El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
+                        Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
+                        recuperación gracias a esfuerzos de conservación.
                         <br>
                         Naturaleza: 10-14 años
                         Cautiverio: 15-20 años
@@ -188,9 +189,186 @@
           </div>
         </div>
       </div>
+    </section> -->
+    <section class="text-center w-100 mx-auto text-center pt-5 pb-5" id="especie">
+      <div class="container">
+        <h1>Especies importantes e interesantes</h1>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4">
+
+          <div class="col">
+            <div class="card h-100 bg-transparent border-4 border-black">
+              <img src="./linceiberico.jpeg" class="card-img-top img-fluid" alt="Lince Ibérico">
+              <div class="card-body">
+                <h2 class="card-title">Lince Ibérico</h2>
+                <p class="card-text">El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
+                  Península Ibérica...</p>
+                <p class="card-text">Peligro de extinción: Crítico</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalLince">
+                  Ver más
+                </button>
+                <div class="modal fade" id="modalLince" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Lince Ibérico</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
+                        Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
+                        recuperación gracias a esfuerzos de conservación.
+                        <br>
+                        Macho: 7-16 kg ||
+                        Hembra: 9.2-10 kg
+                        <br>
+                        Naturaleza: 10-13 años ||
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100 bg-transparent border-4 border-black">
+              <img src="./panteranegra.jpg" class="card-img-top img-fluid" alt="Pantera Negra">
+              <div class="card-body">
+                <h2 class="card-title">Pantera Negra</h2>
+                <p class="card-text">La pantera negra es una variación melánica del leopardo (Panthera pardus)...</p>
+                <p class="card-text">Peligro de extinción: Casi Amenazado/Vulnerable</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalPantera">
+                  Ver más
+                </button>
+                <div class="modal fade" id="modalPantera" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Pantera Negra</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        La pantera negra es una variación melánica del leopardo (Panthera pardus) o jaguar
+                        (Panthera onca), con pelaje negro debido a una mutación genética. Son felinos ágiles, poderosos y
+                        cazadores nocturnos.
+                        <br>
+                        Macho: 30-90 kg || Hembra: 20-60 kg
+                        <br>
+                        Naturaleza: 10-12 años || Cautiverio: 20 o + años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100 bg-transparent border-4 border-black">
+              <img src="./leopardoamur.jpg" class="card-img-top img-fluid" alt="Leopardo Amur">
+              <div class="card-body">
+                <h2 class="card-title">Leopardo Amur</h2>
+                <p class="card-text">El leopardo de Amur (Panthera pardus orientalis) es una subespecie en peligro...</p>
+                <p class="card-text">Peligro de extinción: Crítico</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalLeopardo">
+                  Ver más
+                </button>
+                <div class="modal fade" id="modalLeopardo" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Leopardo de Amur</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        El leopardo de Amur (Panthera pardus orientalis) es una subespecie en peligro, con
+                        menos de 100 individuos en libertad. Habita en el este de Rusia y noreste de China, y enfrenta amenazas
+                        como la caza furtiva y la pérdida de hábitat. Es un cazador solitario y nocturno.
+                        <br>
+                        Macho: 32-48 kg || Hembra: 25-42 kg
+                        <br>
+                        Naturaleza: 10-15 años || Cautiverio: hasta 20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100 bg-transparent border-4 border-black">
+              <img src="./leonblanco.jpg" class="card-img-top img-fluid" alt="León Blanco">
+              <div class="card-body">
+                <h2 class="card-title">León Blanco</h2>
+                <p class="card-text">El león blanco (Panthera Leo) es una rara variante del león africano...</p>
+                <p class="card-text">Peligro de extinción: Vulnerable</p>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalLeon">
+                  Ver más
+                </button>
+                <div class="modal fade" id="modalLeon" aria-labelledby="ejemploModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header mx-auto">
+                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
+                        blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en
+                        reservas y zoológicos. Es un símbolo de belleza y poder.
+                        <br>
+                        Machos: 150-250 kg ||
+                        Hembras: 120-180 kg
+                        <br>
+                        Naturaleza: 10-14 años ||
+                        Cautiverio: 15-20 años
+                      </div>
+                      <div class="modal-footer mx-auto">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-12 col-md-8">
+          <div class="p-4 bg-light border">
+            <img src="./caracal.webp" class="img-fluid w-100" alt="">
+          </div>
+        </div>
+        <div class="col-6 col-md-4 d-flex align-items-center">
+          <div class="p-4 bg-light border w-100">El caracal se encuentra en gran parte de África, así como en algunas zonas del Medio Oriente y Asia Central. Su rango abarca desde África del Norte hasta India y el Irán. Peso: El peso de los caracales varía entre 8 y 19 kg, con los machos siendo generalmente más grandes que las hembras. En naturaleza suelen vivir entre 12 y 15 años, mientras que en cautiverio entre 16 y 20 años.</div>
+        </div>
+        <div class="col-6 col-md-4 d-flex align-items-center">
+          <div class="p-4 bg-light border w-100">El leopardo de las nieves habita las montañas de Asia Central, principalmente en las cordilleras del Himalaya, el Tíbet, y las montañas de Mongolia y China. Peso: Los machos suelen pesar entre 35 y 55 kg, mientras que las hembras pesan entre 25 y 40 kg. En naturaleza suelen vivir entre 10 y 13 años, mientras que en cautiverio hasta más de 20 años.</div>
+        </div>
+        <div class="col-12 col-md-8">
+          <div class="p-4 bg-light border">
+            <img src="./leopardonieves.png" class="img-fluid w-100" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <section>
-      <div></div>
+      
     </section>
   </main>
 
