--- a/felinosDest.html
+++ b/felinosDest.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-xl">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
           <img src="./logo.png" id="logo" alt="" />
@@ -28,10 +28,10 @@
               <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./felinosDest.html">Felinos Destacados</a>
+              <a class="nav-link text-white" href="./felinosDest.html">Felinos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+              <a class="nav-link text-white" href="./leopardoNieves.html">Leopardo Nieves</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
@@ -46,155 +46,10 @@
   </header>
 
   <main>
-    <!-- Arrelgar tamaño de imagenes cuando más pequeño
-    <section class="text-center w-100 mx-auto text-center pt-5 pb-5" id="especie">
-      <div class="container">
-        <h1>Especies importantes e interesantes</h1>
-        <div class="row row-cols-2">
-          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
-            <img src="./linceiberico.jpeg" class="card-img img-fluid" height="200px">
-            <div class="card-body pb-3">
-              <h2 class="card-title">Lince Ibérico</h2>
-              <p class="card-text">El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
-                Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
-                recuperación gracias a esfuerzos de conservación.</p>
-                <p class="card-text">Peligro de extinción: Crítico</p>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
-                  Ver más
-                </button>
-                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        El lince ibérico (Lynx pardinus) es una especie en peligro crítico, endémica de la
-                        Península Ibérica. Amenazado por la pérdida de hábitat y la escasez de conejos, ha mostrado señales de
-                        recuperación gracias a esfuerzos de conservación.
-                        <br>
-                        Naturaleza: 10-14 años
-                        Cautiverio: 15-20 años
-                      </div>
-                      <div class="modal-footer mx-auto">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>
-
-          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
-            <img src="./panteranegra.jpg" class="card-img img-fluid" height="200px">
-            <div class="card-body pb-3">
-              <h2 class="card-title">Pantera Negra</h2>
-              <p class="card-text">La pantera negra es una variación melánica del leopardo (Panthera pardus) o jaguar
-                (Panthera onca), con pelaje negro debido a una mutación genética. Son felinos ágiles, poderosos y
-                cazadores nocturnos.</p>
-                <p class="card-text">Peligro de extinción: Casi Amenazado/Vulnerable</p>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
-                  Ver más
-                </button>
-                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        Machos: 150-250 kg
-                        Hembras: 120-180 kg
-                        <br>
-                        Naturaleza: 10-14 años
-                        Cautiverio: 15-20 años
-                      </div>
-                      <div class="modal-footer mx-auto">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>
-
-          <div class="card col md-3 pt-4 bg-transparent border-4 border-black">
-            <img src="./leopardoamur.jpg" class="card-img img-fluid" height="200px">
-            <div class="card-body pb-3">
-              <h2 class="card-title">Leopardo Amur</h2>
-              <p class="card-text">El leopardo de Amur (Panthera pardus orientalis) es una subespecie en peligro, con
-                menos de 100 individuos en libertad. Habita en el este de Rusia y noreste de China, y enfrenta amenazas
-                como la caza furtiva y la pérdida de hábitat. Es un cazador solitario y nocturno.</p>
-                <p>Peligro de extinción: Crítico</p>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
-                  Ver más
-                </button>
-                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        Machos: 150-250 kg
-                        Hembras: 120-180 kg
-                        <br>
-                        Naturaleza: 10-14 años
-                        Cautiverio: 15-20 años
-                      </div>
-                      <div class="modal-footer mx-auto">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>
-
-          <div class="card col pt-4 bg-transparent border-4 border-black ">
-            <img src="./leonblanco.jpg" class="card-img img-fluid" height="200px">
-            <div class="card-body pb-3">
-              <h2 class="card-title">León Blanco</h2>
-              <p class="card-text">El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
-                blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en
-                reservas y zoológicos. Es un símbolo de belleza y poder.</p>
-                <p>Peligro de extinción: Vulnerable</p>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#ejemploModal">
-                  Ver más
-                </button>
-                <div class="modal fade" id="ejemploModal" aria-labelledby="ejemploModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        Machos: 150-250 kg
-                        Hembras: 120-180 kg
-                        <br>
-                        Naturaleza: 10-14 años
-                        Cautiverio: 15-20 años
-                      </div>
-                      <div class="modal-footer mx-auto">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <section class="text-center w-100 mx-auto text-center pt-5 pb-5" id="especie">
       <div class="container">
         <h1>Especies importantes e interesantes</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4">
-
           <div class="col">
             <div class="card h-100 bg-transparent border-4 border-black">
               <img src="./linceiberico.jpeg" class="card-img-top img-fluid" alt="Lince Ibérico">
@@ -210,7 +65,7 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Lince Ibérico</h1>
+                        <h2 class="modal-title fs-5" id="ejemploModalLabel">Lince Ibérico</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
@@ -248,7 +103,7 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Pantera Negra</h1>
+                        <h2 class="modal-title fs-5" id="ejemploModalLabel">Pantera Negra</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
@@ -284,7 +139,7 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">Leopardo de Amur</h1>
+                        <h2 class="modal-title fs-5" id="ejemploModalLabel">Leopardo de Amur</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
@@ -320,19 +175,18 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header mx-auto">
-                        <h1 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h1>
+                        <h2 class="modal-title fs-5" id="ejemploModalLabel">León Blanco</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
-                        blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en
-                        reservas y zoológicos. Es un símbolo de belleza y poder.
+                        <p>El león blanco (Panthera Leo) es una rara variante del león africano con pelaje
+                          blanco debido a una mutación genética. Su población es muy limitada y se encuentra principalmente en reservas y zoológicos. Es un símbolo de belleza y poder.</p>
                         <br>
-                        Machos: 150-250 kg ||
-                        Hembras: 120-180 kg
-                        <br>
-                        Naturaleza: 10-14 años ||
-                        Cautiverio: 15-20 años
+                        <p>Machos: 150-250 kg ||
+                          Hembras: 120-180 kg</p>
+                                                <br>
+                        <p>Naturaleza: 10-14 años ||
+                          Cautiverio: 15-20 años</p>
                       </div>
                       <div class="modal-footer mx-auto">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -346,26 +200,32 @@
         </div>
       </div>
     </section>
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-12 col-md-8">
-          <div class="p-4 bg-light border">
-            <img src="./caracal.webp" class="img-fluid w-100" alt="">
+    <section>
+      <div class="container pb-5">
+        <div class="row g-4">
+          <h2>Otros grandes felinos</h2>
+          <div class="col-12 col-md-8">
+            <div class="p-4 bg-light border">
+              <img src="./caracal.jpg" class="img-fluid w-100" alt="">
+            </div>
           </div>
-        </div>
-        <div class="col-6 col-md-4 d-flex align-items-center">
-          <div class="p-4 bg-light border w-100">El caracal se encuentra en gran parte de África, así como en algunas zonas del Medio Oriente y Asia Central. Su rango abarca desde África del Norte hasta India y el Irán. Peso: El peso de los caracales varía entre 8 y 19 kg, con los machos siendo generalmente más grandes que las hembras. En naturaleza suelen vivir entre 12 y 15 años, mientras que en cautiverio entre 16 y 20 años.</div>
-        </div>
-        <div class="col-6 col-md-4 d-flex align-items-center">
-          <div class="p-4 bg-light border w-100">El leopardo de las nieves habita las montañas de Asia Central, principalmente en las cordilleras del Himalaya, el Tíbet, y las montañas de Mongolia y China. Peso: Los machos suelen pesar entre 35 y 55 kg, mientras que las hembras pesan entre 25 y 40 kg. En naturaleza suelen vivir entre 10 y 13 años, mientras que en cautiverio hasta más de 20 años.</div>
-        </div>
-        <div class="col-12 col-md-8">
-          <div class="p-4 bg-light border">
-            <img src="./leopardonieves.png" class="img-fluid w-100" alt="">
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="p-4 bg-light border w-100">
+              <p>El caracal se encuentra en gran parte de África, así como en algunas zonas del Medio Oriente y Asia Central. Su rango abarca desde África del Norte hasta India y el Irán. Peso: El peso de los caracales varía entre 8 y 19 kg, con los machos siendo generalmente más grandes que las hembras. En naturaleza suelen vivir entre 12 y 15 años, mientras que en cautiverio entre 16 y 20 años.</p></div>
+          </div>
+          <div class="col-md-4 d-flex align-items-center">
+            <div class="p-4 bg-light border w-100"><p>El leopardo de las nieves habita principalmente en las cordilleras del Himalaya, el Tíbet, y las montañas de Mongolia y China. Peso: Los machos suelen pesar entre 35 y 55 kg, mientras que las hembras pesan entre 25 y 40 kg. En naturaleza suelen vivir entre 10 y 13 años, mientras que en cautiverio hasta más de 20 años.</p></div>
+          </div>
+          <div class="col-12 col-md-8">
+            <div class="p-4 bg-light border">
+              <a href="./leopardoNieves.html">
+                <img src="./img/leopardo/leopardonieves.png" class="img-fluid w-100" alt="">
+              </a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
     
     <section>
       
@@ -386,8 +246,8 @@
           <h5 class="mb-3">Enlaces</h5>
           <ul class="list-unstyled">
             <li><a href="./index.html" class="text-white text-decoration-none">Inicio</a></li>
-            <li><a href="./felinosDest.html" class="text-white text-decoration-none">Felinos Destacados</a></li>
-            <li><a href="./conservacion.html" class="text-white text-decoration-none">Conservación</a></li>
+            <li><a href="./felinosDest.html" class="text-white text-decoration-none">Felinos</a></li>
+            <li><a href="./conservacion.html" class="text-white text-decoration-none">Leopardo de las Nieves</a></li>
             <!-- <li><a href="#" class="text-white text-decoration-none">Equipo de Producción</a></li> -->
           </ul>
         </div>
