--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-xl">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
           <img src="./logo.png" id="logo" alt="" />
@@ -28,10 +28,10 @@
               <a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./felinosDest.html">Felinos Destacados</a>
+              <a class="nav-link text-white" href="./felinosDest.html">Felinos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
+              <a class="nav-link text-white" href="./leopardoNieves.html">Leopardo Nieves</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./conservacion.html">Conservacion</a>
@@ -48,8 +48,12 @@
     <section class="hero bg-dark text-white text-center fondo "
       style="background-image: url('./panteranegra.jpg'); background-size: cover; background-position: center;">
       <div class="container">
-        <h1 class="display-4">Grandes Felinos</h1>
-        <p class="lead">Los Reyes de la Naturaleza</p>
+        <div class="row">
+          <div class="col">
+            <h1 class="display-4">Grandes Felinos</h1>
+          <p class="lead">Los Reyes de la Naturaleza</p>
+          </div>
+        </div>
         <div class="d-flex justify-content-center gap-3">
           <a href="./felinosDest.html" class="btn btn-primary btn-lg">Explora los destacados</a>
           <a href="proyecto.html" class="btn btn-outline-light btn-lg">Sobre el proyecto</a>
@@ -118,7 +122,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./caracal.webp" class="d-block m-auto img-fluid" alt="...">
+            <img src="./caracal.jpg" class="d-block m-auto img-fluid" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Caracal</h5>
             </div>
