eliminar fotos, revisar equipo y responsive

--- a/equipo.html
+++ b/equipo.html
@@ -66,7 +66,7 @@
           <div class="col-md-4">
             <div class="card shadow">
               <img
-                src="./img/equipo/director.jpg"
+                src="./img/equipo/maria.jpg"
                 class="card-img-top"
                 alt="Director"
               />
@@ -83,7 +83,7 @@
           <div class="col-md-4">
             <div class="card shadow">
               <img
-                src="./img/equipo/camarografo.jpg"
+                src="./img/equipo/carlos.jpg"
                 class="card-img-top"
                 alt="Camarógrafo"
               />
@@ -100,7 +100,7 @@
           <div class="col-md-4">
             <div class="card shadow">
               <img
-                src="./img/equipo/editora.jpg"
+                src="./img/equipo/lucia.jpg"
                 class="card-img-top"
                 alt="Editora"
               />
@@ -130,6 +130,7 @@
                   Antes de rodar, el equipo pasó meses investigando el hábitat
                   de los grandes felinos y planificando cada toma en detalle.
                 </p>
+                <img src="./jungla.webp" class="img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-6 mb-4">
@@ -139,6 +140,7 @@
                   El equipo pasó largas jornadas en climas extremos capturando
                   imágenes en su entorno natural.
                 </p>
+                <img src="./img/equipo/himalaya.jpg" class="img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-6 mb-4">
@@ -148,6 +150,7 @@
                   En esta etapa, se editaron más de 200 horas de metraje para
                   crear una narrativa visual impresionante.
                 </p>
+                <img src="./img/equipo/edicion.jpg" class="img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-6 mb-4">
