--- a/leopardoNieves.html
+++ b/leopardoNieves.html
@@ -300,9 +300,9 @@
                   entorno extremo. Protegerlo es proteger la biodiversidad de
                   las montañas."
                 </p>
-                <footer class="blockquote-footer">
-                  Dr. Jane Smith, Bióloga de Conservación
-                </footer>
+                <p class="bg-dark text-white">
+                  - Dr. Jane Smith, Bióloga de Conservación
+                </p>
               </blockquote>
             </div>
             <div class="col-md-6 mb-4">
@@ -311,9 +311,9 @@
                   "Su capacidad para adaptarse y sobrevivir en condiciones
                   adversas lo convierte en un depredador único."
                 </p>
-                <footer class="blockquote-footer">
-                  Prof. Carlos Mendoza, Ecólogo
-                </footer>
+                <p class="bg-dark text-white">
+                  - Prof. Carlos Mendoza, Ecólogo
+                </p>
               </blockquote>
             </div>
           </div>
