--- a/felinosDest.html
+++ b/felinosDest.html
@@ -351,7 +351,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="otros">
         <div class="container pb-5">
           <div class="row g-4">
             <h2>Otros grandes felinos</h2>
