Revisar paginas para añadir contenido

--- a/equipo.html
+++ b/equipo.html
@@ -143,7 +143,7 @@
                 <img src="./img/equipo/himalaya.jpg" class="img-fluid" alt="">
               </div>
             </div>
-            <div class="col-md-6 mb-4">
+            <div class="col-md mb-4 text-center">
               <div class="p-4 bg-white rounded shadow">
                 <h5>Postproducción</h5>
                 <p>
@@ -151,15 +151,6 @@
                   crear una narrativa visual impresionante.
                 </p>
                 <img src="./img/equipo/edicion.jpg" class="img-fluid" alt="">
-              </div>
-            </div>
-            <div class="col-md-6 mb-4">
-              <div class="p-4 bg-white rounded shadow">
-                <h5>Estreno</h5>
-                <p>
-                  El documental fue presentado en festivales internacionales,
-                  recibiendo elogios por su calidad y mensaje de conservación.
-                </p>
               </div>
             </div>
           </div>
@@ -278,7 +269,7 @@
               <h6>Organización 4: Comunidad de la Región de Himalaya</h6>
               <p>
                 Las comunidades locales nos dieron acceso a sus tierras y nos
-                permitieron documentar el comportamiento de los leopardos en su
+                permitieron documentar el comportamiento de los felinos en su
                 hábitat. Además, compartieron valiosas historias y tradiciones
                 relacionadas con los felinos que enriquecieron nuestro
                 documental.
@@ -293,6 +284,37 @@
                 Cerrar
               </button>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container text-center mt-3">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 align-middle">
+            <h2>Grandes Logros</h2>
+          </div>
+          <div class="col-sm-12 col-md-12 mb-5">
+            <p class="fs-5">
+              Nuestro equipo de producción ha logrado grandes hitos en la creación del documental sobre grandes felinos, desde una exhaustiva investigación que nos permitió acceder a hábitats de difícil alcance y trabajar con expertos, hasta la captura de imágenes impresionantes en condiciones extremas. A través de una cinematografía de alto nivel y una colaboración internacional, hemos logrado sensibilizar al público sobre la urgente necesidad de conservar estas especies, mostrando tanto los desafíos como las soluciones globales. El impacto del documental ha sido significativo, recibiendo elogios por su enfoque educativo y visualmente impactante, reflejando el esfuerzo y la pasión de todo el equipo.</p>
+          </div>
+          <div class="col-md-6">
+            <img src="./img/equipo/premiofoto.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-6">
+            <img src="./img/equipo/equipoprod.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container text-center pt-5">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Documental de otros Grandes Felinos</h2>
+          </div>
+          <div class="col-md-12">
+            <iframe width="900" height="515" src="https://www.youtube.com/embed/f1emA6Qv5vQ?si=sPoos_BvOQ5rwT4_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
       </div>
