Revisar responsive, revisar video, revisar pagina inicio para mejorar

--- a/leopardoNieves.html
+++ b/leopardoNieves.html
@@ -294,15 +294,19 @@
           <div class="col-md-12">
             <h2>Documental sobre la fauna del Himalaya</h2>
           </div>
-          <div class="col-md-6 my-auto">
+          <div class="col-md-4 m-auto">
             <h4>"Fauna del Himalaya: Un Mundo Secreto"</h4>
-           <p>Este documental te lleva a los remotos paisajes del Himalaya, explorando la increíble fauna que habita sus montañas, desde los majestuosos íbices hasta el enigmático leopardo de las nieves. A través de impresionantes imágenes, descubrimos la vida de estos animales en su entorno extremo, revelando las luchas por sobrevivir en uno de los ecosistemas más desafiantes del planeta.</p>
+            <p>Este documental te lleva a los remotos paisajes del Himalaya, explorando la increíble fauna que habita sus montañas, desde los majestuosos íbices hasta el enigmático leopardo de las nieves. A través de impresionantes imágenes, descubrimos la vida de estos animales en su entorno extremo, revelando las luchas por sobrevivir en uno de los ecosistemas más desafiantes del planeta.</p>
           </div>
+          <!-- Hacer el video responsive -->
           <div class="col-md-6">
-            <iframe width="760" height="515" src="https://www.youtube.com/embed/oAiR5nBVLmk?si=2c_dRc9qD61SqD2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/oAiR5nBVLmk?si=2c_dRc9qD61SqD2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </section>
+      
 
       <section class="bg-light" id="testimonios">
         <div class="container">
