--- a/equipo.html
+++ b/equipo.html
@@ -66,7 +66,7 @@
           <div class="col-md-4">
             <div class="card shadow">
               <img
-                src="./img/equipo/maria.jpg"
+                src="./img/equipo/maria.avif"
                 class="card-img-top"
                 alt="Director"
               />
@@ -83,8 +83,8 @@
           <div class="col-md-4">
             <div class="card shadow">
               <img
-                src="./img/equipo/carlos.jpg"
-                class="card-img-top"
+                src="./img/equipo/carlos.avif"
+                class="card-img-top img-fluid"
                 alt="Camarógrafo"
               />
               <div class="card-body">
@@ -298,21 +298,22 @@
             <p class="fs-5">
               Nuestro equipo de producción ha logrado grandes hitos en la creación del documental sobre grandes felinos, desde una exhaustiva investigación que nos permitió acceder a hábitats de difícil alcance y trabajar con expertos, hasta la captura de imágenes impresionantes en condiciones extremas. A través de una cinematografía de alto nivel y una colaboración internacional, hemos logrado sensibilizar al público sobre la urgente necesidad de conservar estas especies, mostrando tanto los desafíos como las soluciones globales. El impacto del documental ha sido significativo, recibiendo elogios por su enfoque educativo y visualmente impactante, reflejando el esfuerzo y la pasión de todo el equipo.</p>
           </div>
-          <div class="col-md-6">
-            <img src="./img/equipo/premiofoto.jpg" class="img-fluid" alt="">
+          <div class="col-md-6 pb-5">
+            <img src="./img/equipo/trofeo.jfif" class="img-fluid" alt="">
           </div>
           <div class="col-md-6">
-            <img src="./img/equipo/equipoprod.jpg" class="img-fluid" alt="">
+            <img src="./img/equipo/produccion.avif" class="img-fluid" alt="">
           </div>
         </div>
       </div>
     </section>
     <section>
-      <div class="container text-center pt-5">
+      <div class="container text-center pt-5 pb-5">
         <div class="row">
           <div class="col-md-12">
             <h2>Documental de otros Grandes Felinos</h2>
           </div>
+          <!-- Hacer el video responsive -->
           <div class="col-md-12">
             <iframe width="900" height="515" src="https://www.youtube.com/embed/f1emA6Qv5vQ?si=sPoos_BvOQ5rwT4_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
